--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "graphql": "0.13.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.0-beta.0",
-    "mongoose": "^5.1.3",
-    "ts-node": "^6.0.5",
-    "typescript": "^2.8.3"
+    "mongoose": "^5.1.3"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
@@ -21,7 +19,9 @@
     "graphql-typings": "0.0.1-beta-2",
     "nodemon": "^1.17.5",
     "prettier": "1.13.3",
-    "tslint": "^5.10.0"
+    "tslint": "^5.10.0",
+    "ts-node": "^6.0.5",
+    "typescript": "^2.8.3"
   },
   "scripts": {
     "dev": "nodemon --watch src && tslint-check",
