--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Starting point for the Apollo GraphQL Server tutorial.",
   "main": "src/server.ts",
   "dependencies": {
-    "apollo-server": "^2.0.0-beta.7",
+    "apollo-server": "^2.0.0-beta.10",
     "dotenv": "^6.0.0",
     "google-auth-library": "^1.5.0",
     "graphql": "0.13.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.0-beta.0",
-    "mongoose": "^5.1.3"
+    "graphql-tag": "2.9.2",
+    "graphql-tools": "^3.0.2",
+    "mongoose": "5.1.5"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
@@ -21,7 +21,7 @@
     "prettier": "1.13.3",
     "tslint": "^5.10.0",
     "ts-node": "^6.0.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.1"
   },
   "scripts": {
     "dev": "nodemon --watch src && tslint-check",
