--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "graphql-tools": "^3.0.2",
-    "mongoose": "5.1.5"
+    "mongoose": "5.1.5",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
     "@types/graphql": "^0.13.1",
     "@types/mongoose": "^5.0.15",
+    "@types/winston": "^2.3.9",
     "graphql-typings": "0.0.1-beta-2",
     "nodemon": "^1.17.5",
     "prettier": "1.13.3",
-    "tslint": "^5.10.0",
     "ts-node": "^6.0.5",
+    "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   },
   "scripts": {
