--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starting point for the Apollo GraphQL Server tutorial.",
   "main": "src/server.ts",
   "dependencies": {
-    "apollo-server": "^2.0.0-beta.10",
+    "apollo-server": "^2.0.0-rc.0",
     "dotenv": "^6.0.0",
     "google-auth-library": "^1.5.0",
     "graphql": "0.13.2",
